--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: action/setup-python@v2
+      - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
       - run: python -c "print('hello world!')" # 파이썬으로 hello world! 출력
