--- a/.github/workflows/GitActionTest.yml
+++ b/.github/workflows/GitActionTest.yml
@@ -10,15 +10,43 @@ jobs:
   python-hello:
     runs-on: ubuntu-latest
     steps:
-      # step 의 checkout 까지는 변화가 없음
       - uses: actions/checkout@v2
-      
-      # 여기에서부터 사용하려는 개발 환경으로 수정해줘야 함
-      # 이번에는 파이썬을 사용하므로 동일
       - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-
-      # 출력이 아니라 수행할 내용으로 수정
-      - run: pip install -r requirements.txt # 라이브러리 설치, txt 파일 필요함
-      - run: pytest # 테스트 수행 - pytest
+      - run: pip install -r requirements.txt 
+      - run: pytest 
+  # test 가 끝난 후 build 수행
+  build:
+    needs: [run-test-code]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up python 3.10
+        uses: actions/setup-python@v4 # 3.10 버전을 사용하므로 v4
+        with:
+          python-version: '3.10'
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      # docker hub 에 login
+      - name: Login tp DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: whdgh
+          # 이전의 토큰 사용
+          password: dckr_pat_WWQlq8ywG2VGhvfZueDgwYxmSzo
+      - name: build and release
+        # 환경 설정
+        env: 
+          NAME: whdgh
+          # 레포지토리 이름
+          REPO: flaskwebtest
+        # %REPO:latest 이름을 $NAME/$REPO:latest 로 수정
+        # build 할 때 처음부터 이름을 $NAME/$REPO:latest 로 설정해도 됨
+        run: |
+          docker build -t $REPO .
+          docker tag %REPO:latest $NAME/$REPO:latest
+          docker push $NAME/$REPO:latest
