--- a/.github/workflows/GitActionTest.yml
+++ b/.github/workflows/GitActionTest.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
     
 jobs:
-  python-hello:
+  run-test-code:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
